[forums] change da world, my final message. goo d bye

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -4,8 +4,6 @@
 	"this is invalid": "this is invalid",
 	"this is still invalid": "this is still invalid",
 
-	"The music you were looking for cannot be found.": "The music you were looking for cannot be found.",
-
 	"Please enter your username! ": "Please enter your username! ",
 	"Please enter your password! ": "Please enter your password! ",
 	"Incorrect username or password.": "Incorrect username or password.",
@@ -31,178 +29,7 @@
 	"Your video is already uploading or has been uploaded.": "Your video is already uploading or has been uploaded.",
 	"Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.",
 
-	"The image/artwork you were looking for cannot be found.": "The image/artwork you were looking for cannot be found.",
-
 	"The video you were looking for cannot be found.": "The video you were looking for cannot be found.",
-
-	"You have no permissions to do this!": "You have no permissions to do this!",
-	"Cannot delete group: invalid group ID": "Cannot delete group: invalid group ID",
-	"This group cannot be deleted because it contains users": "This group cannot be deleted because it contains users",
-	"This group cannot be deleted because it has permissions attached and you may not edit permissions.": "This group cannot be deleted because it has permissions attached and you may not edit permissions.",
-	"Endless recursion detected, choose another parent for this group": "Endless recursion detected, choose another parent for this group",
-	"You must enter a name for the group.": "You must enter a name for the group.",
-	"Main": "Main",
-	"Edit groups": "Edit groups",
-	"New group": "New group",
-	"Group Settings": "Group Settings",
-	"Name": "Name",
-	"Parent group": "Parent group",
-	"Sort order": "Sort order",
-	"Visibility": "Visibility",
-	"Invisible": "Invisible",
-	"Visible": "Visible",
-	"Color": "Color",
-	"Apply changes": "Apply changes",
-	"Order": "Order",
-	"Edit perms": "Edit perms",
-	"Edit": "Edit",
-	"Delete": "Delete",
-
-	"Invalid {$type} ID.": "Invalid {$type} ID.",
-	"The %s permission has been successfully assigned!": "The %s permission has been successfully assigned!",
-	"You do not have the permissions to assign the %s permission!": "You do not have the permissions to assign the %s permission!",
-	"The %s permission has been successfully edited!": "The %s permission has been successfully edited!",
-	"You do not have the permissions to edit the %s permission!": "You do not have the permissions to edit the %s permission!",
-	"The %s permission has been successfully deleted!": "The %s permission has been successfully deleted!",
-	"You do not have the permissions to delete the %s permission!": "You do not have the permissions to delete the %s permission!",
-	"Edit permissions": "Edit permissions",
-	"for ID": "for ID",
-	"Apply": "Apply",
-	"Remove": "Remove",
-	"Add permission": "Add permission",
-	"Add": "Add",
-	"Permissions inherited from parent groups:": "Permissions inherited from parent groups:",
-	"Permissions overview for {$type} '%s'": "Permissions overview for {$type} '%s'",
-	"Grant": "Grant",
-	"Revoke": "Revoke",
-
-	"You can't edit a post in closed threads!": "You can't edit a post in closed threads!",
-	"You do not have permission to edit this post.": "You do not have permission to edit this post.",
-	"Invalid post ID.": "Invalid post ID.",
-	"Post doesn't exist.": "Post doesn't exist.",
-	"Submit": "Submit",
-	"No changes detected.": "No changes detected.",
-	"You do not have the permission to do this.": "You do not have the permission to do this.",
-	"Edit post": "Edit post",
-	"Preview": "Preview",
-	" (Preview)": " (Preview)",
-
-	"Forum does not exist.": "Forum does not exist.",
-	"New thread": "New thread",
-	"User does not exist.": "User does not exist.",
-	"Threads": "Threads",
-	"Latest threats": "Latest threats",
-
-	"Please enter a title for the category.": "Please enter a title for the category.",
-	"Please enter a title for the forum.": "Please enter a title for the forum.",
-	"Create": "Create",
-	"category": "category",
-	"Title:": "Title:",
-	"Display order:": "Display order:",
-	"Save category": "Save category",
-	"Delete category": "Delete category",
-	"Really delete this category?": "Really delete this category?",
-	"Back": "Back",
-	"forum": "forum",
-	"Description:": "Description:",
-	"HTML allowed.": "HTML allowed.",
-	"Category:": "Category:",
-	"Private forum": "Private forum",
-	"Read-only": "Read-only",
-	"Save forum": "Save forum",
-	"Delete forum": "Delete forum",
-	"Really delete this forum?": "Really delete this forum?",
-	"Categories": "Categories",
-	"New category": "New category",
-	"Forums": "Forums",
-	"New forum": "New forum",
-	"Forum management": "Forum management",
-	"Permissions": "Permissions",
-	"Inherit from parent": "Inherit from parent",
-
-	"Pages:": "Pages:",
-
-	"Thread does not exist.": "Thread does not exist.",
-	"You have no permissions to create posts in this forum!": "You have no permissions to create posts in this forum!",
-	"You can't post in closed threads.": "You can't post in closed threads.",
-	"You can't double post until it's been at least one day!": "You can't double post until it's been at least one day!",
-	"You must wait 2 seconds before posting consecutively.": "You must wait 2 seconds before posting consecutively.",
-	"Your post is empty! Enter a message and try again.": "Your post is empty! Enter a message and try again.",
-	"New reply": "New reply",
-
-	"You have no permissions to create threads in this forum!": "You have no permissions to create threads in this forum!",
-	"You need to enter a message to your thread.": "You need to enter a message to your thread.",
-	"Don't post threads so fast, wait a little longer.": "Don't post threads so fast, wait a little longer.",
-	"You must wait 2 seconds before posting a thread.": "You must wait 2 seconds before posting a thread.",
-
-	"You are not allowed to (un)delete that message.": "You are not allowed to (un)delete that message.",
-	"Private messages": "Private messages",
-	" (sent)": " (sent)",
-	"User doesn't exist.": "User doesn't exist.",
-	"View received": "View received",
-	"View sent": "View sent",
-	"Send new": "Send new",
-
-	"Search": "Search",
-	"Search for": "Search for",
-	"thread title": "thread title",
-	"post text": "post text",
-	"Please enter more than 2 characters!": "Please enter more than 2 characters!",
-	"Results": "Results",
-	"No posts found.": "No posts found.",
-	"Title": "Title",
-	"Started by": "Started by",
-	"Date": "Date",
-	" (Sticky)": " (Sticky)",
-	"No threads found.": "No threads found.",
-
-	"You can't send more than one PM within 30 seconds!": "You can't send more than one PM within 30 seconds!",
-	"That user doesn't exist!": "That user doesn't exist!",
-	"You can't send a blank message!": "You can't send a blank message!",
-	"Re:": "Re:",
-
-	"Private message does not exist.": "Private message does not exist.",
-	"(untitled)": "(untitled)",
-	"Reply": "Reply",
-
-	"Invalid page number": "Invalid page number",
-	"Thread post does not exist.": "Thread post does not exist.",
-	"Unknown action.": "Unknown action.",
-	"Posts by ": "Posts by ",
-	"Thread does not exist.<br><a href=./>Back to main</a>": "Thread does not exist.<br><a href=./>Back to main</a>",
-	"Unstick": "Unstick",
-	"Stick": "Stick",
-	"Open": "Open",
-	"Close": "Close",
-	"Trash": "Trash",
-	"Rename": "Rename",
-	"Move": "Move",
-	"Cancel": "Cancel",
-	"Move to:": "Move to:",
-	"Rename thread:": "Rename thread:",
-
-	"Link": "Link",
-	"rev.": "rev.",
-	"of": "of",
-	"by": "by",
-	"ID:": "ID:",
-	"Revision": "Revision",
-	"Posted on": "Posted on",
-	"Posts": "Posts",
-	"Since": "Since",
-	"Last post": "Last post",
-	"Last seen": "Last seen",
-
-	"Sign in": "Sign in",
-	"Upload": "Upload",
-	"Search...": "Search...",
-	"Home": "Home",
-	"Videos": "Videos",
-	"Music": "Music",
-	"By the squareBracket contributors": "By the squareBracket contributors",
-	"Users registered": "Users registered",
-	"Videos uploaded": "Videos uploaded",
-	"Git Commit": "Git Commit",
 
 	"Access Denied": "Access Denied",
 
@@ -210,8 +37,7 @@
 
 	"Latest videos": "Latest videos",
 	"(Page %s)": "(Page %s)",
-	"Images": "Images",
-	"Text": "Text",
+	"Categories": "Categories",
 	"All": "All",
 	"Miscellanous": "Miscellanous",
 	"Entertainment": "Entertainment",
@@ -234,6 +60,7 @@
 	"Unbelivable, This is not PokTube.": "Unbelivable, This is not PokTube.",
 	"Get started": "Get started",
 	"Already have an account?": "Already have an account?",
+	"Sign in": "Sign in",
 	"Settings successfully saved!": "Settings successfully saved!",
 	"squareBracket Videos": "squareBracket Videos",
 	"No uploaded videos.": "No uploaded videos.",
@@ -284,7 +111,6 @@
 	"Display name": "Display name",
 	"Description": "Description",
 	"Markdown allowed.": "Markdown allowed.",
-	"Forum signature": "Forum signature",
 	"Username color": "Username color",
 	"Background color": "Background color",
 	"Text color": "Text color",
@@ -299,7 +125,9 @@
 	"Statistics": "Statistics",
 	"About squareBracket": "About squareBracket",
 	"Users": "Users",
+	"Videos": "Videos",
 
+	"Upload": "Upload",
 	"Upload video": "Upload video",
 	"Video info": "Video info",
 	"Enter the title and description of your video.": "Enter the title and description of your video.",
@@ -311,32 +139,13 @@
 	"Upload guidelines": "Upload guidelines",
 	"Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.": "Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.",
 
-	"Upload image": "Upload image",
-	"Image info": "Image info",
-	"Image file": "Image file",
-	"Select the image file you want to upload.": "Select the image file you want to upload.",
-	"Do not upload any images/photos/artwork that you haven't created.": "Do not upload any images/photos/artwork that you haven't created.",
-
-	"Upload music": "Upload music",
-	"Song info": "Song info",
-	"Song file": "Song file",
-	"Select the Music file you want to upload.": "Select the Music file you want to upload.",
-	"Do not upload any songs that you haven't created.": "Do not upload any songs that you haven't created.",
-
-	"Video": "Video",
-	"Images/Artwork": "Images/Artwork",
-	"Upload image/artwork": "Upload image/artwork",
-
 	"Marked all notifications as read.": "Marked all notifications as read.",
 	"About": "About",
 	"Last visit": "Last visit",
 	"Registered": "Registered",
 	"Edit my settings": "Edit my settings",
-	"View my messages": "View my messages",
 	"View as viewer": "View as viewer",
-	"Send message": "Send message",
 	"Generate password reset": "Generate password reset",
-	"Edit forum permissions": "Edit forum permissions",
 	"Featured": "Featured",
 	"From:": "From:",
 	"There are currently no videos uploaded by %s.": "There are currently no videos uploaded by %s.",
@@ -344,11 +153,11 @@
 	"Enter comment here.": "Enter comment here.",
 	"Comment": "Comment",
 
-	"Channel settings": "Channel settings",
-	"Published on %s": "Published on %s",
-
+	"Edit": "Edit",
 	"Video Manager": "Video Manager",
 	"Like": "Like",
+	"Published on %s": "Published on %s",
+	"Category:": "Category:",
 	"License:": "License:",
 	"Standard squareBracket License": "Standard squareBracket License",
 	"Stats": "Stats",
@@ -360,58 +169,28 @@
 
 	"Sorry about that.": "Sorry about that.",
 
+	"By the squareBracket contributors": "By the squareBracket contributors",
 	"Running on commit: ": "Running on commit: ",
 
 	"view%s": "view%s",
 
 	"This video is being processed. Try again later.": "This video is being processed. Try again later.",
 
+	"by": "by",
 	"views": "views",
 
 	"Profile": "Profile",
 	"Studio": "Studio",
 	"Log out": "Log out",
 	"Browse": "Browse",
+	"Search": "Search",
+	"Search...": "Search...",
 
-	"Active users": "Active users",
-	"Active users during the last %s": "Active users during the last %s",
-	"Registered on": "Registered on",
-	"Total": "Total",
-	"There are no active users in the given timespan.": "There are no active users in the given timespan.",
-
-	"Post preview": "Post preview",
-	"Edit Post": "Edit Post",
-	"Post:": "Post:",
-
-	"Latest Threads": "Latest Threads",
-	"By Threads": "By Threads",
-	"By Posts": "By Posts",
-	"Forum": "Forum",
-	"Replies": "Replies",
-	"Views": "Views",
-
-	"Memberlist": "Memberlist",
-	"Sort by:": "Sort by:",
-	"ID": "ID",
-	"Picture": "Picture",
-
-	"New Reply": "New Reply",
-
-	"Thread": "Thread",
-	"Thread title:": "Thread title:",
-
-	"Sent on": "Sent on",
-	"There are no private messages.": "There are no private messages.",
-
-	"Send private message": "Send private message",
-	"(Message preview)": "(Message preview)",
-	"Send to:": "Send to:",
-	"Message:": "Message:",
-
-	"Latest Posts": "Latest Posts",
-	"No posts were found.": "No posts were found.",
-	"Quick Reply": "Quick Reply",
-	"Reply:": "Reply:",
+	"Logout": "Logout",
+	"Sign In": "Sign In",
+	"Home": "Home",
+	"Channels": "Channels",
+	"Forums": "Forums",
 
 	"Edit video": "Edit video",
 	"Details": "Details",
