oops, i forgot some strings

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -155,6 +155,8 @@
 
 	"Edit": "Edit",
 	"Video Manager": "Video Manager",
+	"videos": "videos",
+	"Channel settings": "Channel settings",
 	"Like": "Like",
 	"Published on %s": "Published on %s",
 	"Category:": "Category:",
