update localization template
111 localization support will be done when 111's done

also remove french canadian localization due to it being outdated

--- a/private/lang/template.json
+++ b/private/lang/template.json
@@ -1,72 +1,26 @@
 {
 	"\\RelativeTime\\Languages\\English": "\\RelativeTime\\Languages\\English",
 
-	"this is invalid": "this is invalid",
-	"this is still invalid": "this is still invalid",
-
-	"Please enter your username! ": "Please enter your username! ",
-	"Please enter your password! ": "Please enter your password! ",
-	"Incorrect username or password.": "Incorrect username or password.",
-
-	"No POST data.": "No POST data.",
-
-	"Blank username.": "Blank username.",
-	"Password is too short.": "Password is too short.",
-	"The passwords don't match.": "The passwords don't match.",
-	"Blank display name.": "Blank display name.",
-	"Username has already been taken. ": "Username has already been taken. ",
-	"Username contains invalid characters (Only alphanumeric and underscore allowed).": "Username contains invalid characters (Only alphanumeric and underscore allowed).",
-	"Incorrect CAPTCHA. Please try again.": "Incorrect CAPTCHA. Please try again.",
-
-	"No reset data.": "No reset data.",
-
-	" The new passwords aren't identical.": " The new passwords aren't identical.",
-	"Your current password is incorrect.": "Your current password is incorrect.",
-
-	"Follow": "Follow",
-	"Unfollow": "Unfollow",
-
-	"Your video is already uploading or has been uploaded.": "Your video is already uploading or has been uploaded.",
-	"Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.",
-
-	"The video you were looking for cannot be found.": "The video you were looking for cannot be found.",
-
 	"Access Denied": "Access Denied",
 
-	"This is not your video.": "This is not your video.",
+	"Settings": "Settings",
+	"Email": "Email",
+	"Change Password": "Change Password",
+	"Current Password (For verification)": "Current Password (For verification)",
+	"New Password": "New Password",
+	"Repeat new Password": "Repeat new Password",
+	"Profile picture": "Profile picture",
+	"Display name": "Display name",
+	"Description": "Description",
+	"Markdown allowed.": "Markdown allowed.",
+	"Username color": "Username color",
+	"Save Changes": "Save Changes",
 
-	"Latest videos": "Latest videos",
-	"(Page %s)": "(Page %s)",
-	"Categories": "Categories",
-	"All": "All",
-	"Miscellanous": "Miscellanous",
-	"Entertainment": "Entertainment",
-	"Shitposting & Comedy": "Shitposting & Comedy",
-	"Gaming": "Gaming",
-	"News and Updates": "News and Updates",
-	"Lifestyle": "Lifestyle",
-	"Science and Technology": "Science and Technology",
-	"Archive Dump": "Archive Dump",
-	"There are no videos of that category.": "There are no videos of that category.",
-	"You could create one!": "You could create one!",
-
-	"Welcome to squareBracket,": "Welcome to squareBracket,",
 	"s": "s",
-	"%s follower%s": "%s follower%s",
-	"no": "no",
-	"%s view%s": "%s view%s",
-	"Manage": "Manage",
-	"Welcome to squareBracket": "Welcome to squareBracket",
-	"Unbelivable, This is not PokTube.": "Unbelivable, This is not PokTube.",
-	"Get started": "Get started",
-	"Already have an account?": "Already have an account?",
-	"Sign in": "Sign in",
-	"Settings successfully saved!": "Settings successfully saved!",
-	"squareBracket Videos": "squareBracket Videos",
-	"No uploaded videos.": "No uploaded videos.",
-	"What's new?": "What's new?",
-	"This is the result of squareBracket's growing pains. Fuck you.": "This is the result of squareBracket's growing pains. Fuck you.",
 
+	"Published on %s": "Published on %s",
+
+	"Sign in": "Sign in",
 	"Password successfully reset! Please login with your new password.": "Password successfully reset! Please login with your new password.",
 	"You have been successfully logged out of all devices.": "You have been successfully logged out of all devices.",
 	"Username": "Username",
@@ -83,7 +37,6 @@
 	"Square": "Square",
 	"Rounded": "Rounded",
 	"Circle": "Circle",
-	"Save Changes": "Save Changes",
 
 	"Register": "Register",
 	"Display Name": "Display Name",
@@ -95,102 +48,58 @@
 	"Repeat New Password:": "Repeat New Password:",
 
 	"There are no videos that match your query.": "There are no videos that match your query.",
-	"squareBracket isn't that big, y'know.": "squareBracket isn't that big, y'know.",
 
-	"Settings": "Settings",
 	"Log out from all devices": "Log out from all devices",
-	"Overview": "Overview",
 	"Credentials": "Credentials",
-	"Profile setup": "Profile setup",
-	"Change Password": "Change Password",
-	"Current Password (For verification)": "Current Password (For verification)",
-	"New Password": "New Password",
-	"Repeat new Password": "Repeat new Password",
-	"Customize your profile": "Customize your profile",
-	"Profile picture": "Profile picture",
-	"Display name": "Display name",
-	"Description": "Description",
-	"Markdown allowed.": "Markdown allowed.",
-	"Username color": "Username color",
-	"Background color": "Background color",
-	"Text color": "Text color",
-	"Title color": "Title color",
-	"Link color": "Link color",
-	"Header text color": "Header text color",
-	"Outter header/border": "Outter header/border",
-	"Outter background": "Outter background",
-	"Inner header/border": "Inner header/border",
-	"Inner background": "Inner background",
+	"Profile": "Profile",
+	"Miscellaneous": "Miscellaneous",
+	"Sounds": "Sounds",
+	"Enable sounds": "Enable sounds",
 
 	"Statistics": "Statistics",
-	"About squareBracket": "About squareBracket",
+	"About this instance of squareBracket": "About this instance of squareBracket",
 	"Users": "Users",
 	"Videos": "Videos",
 
-	"Upload": "Upload",
-	"Upload video": "Upload video",
-	"Video info": "Video info",
-	"Enter the title and description of your video.": "Enter the title and description of your video.",
-	" Title": " Title",
-	" Description": " Description",
-	" Tags": " Tags",
-	"Video file": "Video file",
-	"Select the video file you want to upload.": "Select the video file you want to upload.",
-	"Upload guidelines": "Upload guidelines",
-	"Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.": "Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.",
-
-	"Marked all notifications as read.": "Marked all notifications as read.",
-	"About": "About",
-	"Last visit": "Last visit",
-	"Registered": "Registered",
 	"Edit my settings": "Edit my settings",
-	"View as viewer": "View as viewer",
-	"Generate password reset": "Generate password reset",
-	"Featured": "Featured",
-	"From:": "From:",
+	"View user page as viewer": "View user page as viewer",
+	"Admin panel": "Admin panel",
+	"%s follower%s": "%s follower%s",
+	"no": "no",
+	"%s view%s": "%s view%s",
+	"Edit profile": "Edit profile",
+	"Unfollow": "Unfollow",
+	"Follow": "Follow",
+	"Marked all notifications as read.": "Marked all notifications as read.",
+	"Settings successfully saved!": "Settings successfully saved!",
+	"Notifications": "Notifications",
+	"No new notifications!": "No new notifications!",
+	"Mark all as read": "Mark all as read",
+	"About this user": "About this user",
+	"View threads": "View threads",
+	"Show posts": "Show posts",
+	"Send private message": "Send private message",
+	"Generate password reset for user": "Generate password reset for user",
+	"Edit forum permissions": "Edit forum permissions",
 	"There are currently no videos uploaded by %s.": "There are currently no videos uploaded by %s.",
-	"Comments": "Comments",
+	"General information": "General information",
+	"Registered on": "Registered on",
+	"Last logged in": "Last logged in",
 	"Enter comment here.": "Enter comment here.",
 	"Comment": "Comment",
 
-	"Edit": "Edit",
-	"Video Manager": "Video Manager",
-	"videos": "videos",
-	"Channel settings": "Channel settings",
-	"Like": "Like",
-	"Published on %s": "Published on %s",
-	"Category:": "Category:",
-	"License:": "License:",
-	"Standard squareBracket License": "Standard squareBracket License",
-	"Stats": "Stats",
-	"Like-to-dislike ratio:": "Like-to-dislike ratio:",
-	"Most recent view:": "Most recent view:",
-	"Flag this video": "Flag this video",
-	"More videos": "More videos",
-
 	"Sorry about that.": "Sorry about that.",
 
-	"Guide": "Guide",
-	"By the squareBracket contributors": "By the squareBracket contributors",
-	"Running on commit: ": "Running on commit: ",
-
 	"view%s": "view%s",
-
-	"Show replies": "Show replies",
-	"Reply": "Reply",
-
-	"This video is being processed. Try again later.": "This video is being processed. Try again later.",
 
 	"by": "by",
 	"views": "views",
 
-	"Profile": "Profile",
+	"More videos": "More videos",
+
 	"Studio": "Studio",
 	"Log out": "Log out",
-	"Browse": "Browse",
-	"Search": "Search",
-	"Search...": "Search...",
-
+	"Upload": "Upload",
 	"Logout": "Logout",
 	"Sign In": "Sign In",
 	"Home": "Home",
@@ -198,13 +107,98 @@
 
 	"Edit video": "Edit video",
 	"Details": "Details",
+	"Comments": "Comments",
+	"Video info": "Video info",
+	"Enter the title and description of your video.": "Enter the title and description of your video.",
+	" Title": " Title",
+	" Description": " Description",
+	" Tags": " Tags",
+	"Edit": "Edit",
 
 	"You do not have any uploaded videos!": "You do not have any uploaded videos!",
 
+	"Latest videos": "Latest videos",
+	"(Page %s)": "(Page %s)",
+	"Categories": "Categories",
+	"All": "All",
+	"Miscellanous": "Miscellanous",
+	"Entertainment": "Entertainment",
+	"Comedy & Humor": "Comedy & Humor",
+	"Gaming": "Gaming",
+	"News and Updates": "News and Updates",
+	"Lifestyle": "Lifestyle",
+	"Science and Technology": "Science and Technology",
+	"Archive Dump": "Archive Dump",
+	"There are no videos of that category.": "There are no videos of that category.",
+	"You could create one!": "You could create one!",
+
+	"Welcome to squareBracket": "Welcome to squareBracket",
+	"Manage": "Manage",
+	"Again.": "Again.",
+	"Get started": "Get started",
+	"Already have an account?": "Already have an account?",
+	"Recommended randomly": "Recommended randomly",
+	"No uploaded videos.": "No uploaded videos.",
+	"Recently uploaded to squareBracket": "Recently uploaded to squareBracket",
+
+	"Upload video": "Upload video",
+	"Video file": "Video file",
+	"Select the video file you want to upload.": "Select the video file you want to upload.",
+	"Upload guidelines": "Upload guidelines",
+	"Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.": "Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.",
+
+	"Video Manager": "Video Manager",
+	"videos": "videos",
+	"Channel settings": "Channel settings",
+	"About": "About",
+	"Category:": "Category:",
+	"Stats": "Stats",
+	"Like-to-dislike ratio:": "Like-to-dislike ratio:",
+	"Most recent view:": "Most recent view:",
+	"Flag this video": "Flag this video",
+
+	"Guide": "Guide",
+	"By the squareBracket contributors": "By the squareBracket contributors",
+	"Running on commit: ": "Running on commit: ",
+
+	"Show replies": "Show replies",
+	"Reply": "Reply",
+
 	"Latest Videos": "Latest Videos",
+	"squareBracket Videos": "squareBracket Videos",
 
-	"Don't have an account?": "Don't have an account?",
+	"License:": "License:",
+	"Standard squareBracket License": "Standard squareBracket License",
+	"Unfiltered views:": "Unfiltered views:",
 
-	"Unfiltered views:": "Unfiltered views:"
+	"Browse": "Browse",
 
+	"Search...": "Search...",
+
+	"Missing important POST variable.": "Missing important POST variable.",
+	"Your comment has been submitted.": "Your comment has been submitted.",
+
+	"Please enter your username! ": "Please enter your username! ",
+	"Please enter your password! ": "Please enter your password! ",
+	"Incorrect username or password.": "Incorrect username or password.",
+
+	"No POST data.": "No POST data.",
+
+	"Blank username.": "Blank username.",
+	"Password is too short.": "Password is too short.",
+	"The passwords don't match.": "The passwords don't match.",
+	"Blank display name.": "Blank display name.",
+	"Username has already been taken. ": "Username has already been taken. ",
+	"Username contains invalid characters (Only alphanumeric and underscore allowed).": "Username contains invalid characters (Only alphanumeric and underscore allowed).",
+
+	"No reset data.": "No reset data.",
+
+	" The new passwords aren't identical.": " The new passwords aren't identical.",
+	"Your current password is incorrect.": "Your current password is incorrect.",
+
+	"Please wait 2 minutes before uploading again. If you've already uploaded a video, it is (probably) being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a video, it is (probably) being processed.",
+
+	"The video you were looking for cannot be found.": "The video you were looking for cannot be found.",
+
+	"This is not your video.": "This is not your video.",
 }
